# cross-shark

./: .gitignore  MCN出海管理平台-需求文档.md  app.py  eslint.config.js  index.html  longmao_parser.py  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
backend/: app.py  pyproject.toml
backend/src/: longmao_parser.py
src/: App.vue  main.ts  style.css
src/components/: AppSidebar.vue  Breadcrumb.vue  NavBrand.vue  NavMain.vue
